# QUARK-plugin-quantinuum

./: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  mypy.ini  pyproject.toml
.github/: change-filters.yml
.github/workflows/: ci-tests.yml
examples/: single_pipline_config.yml
src/quark_plugin_quantinuum/: __init__.py
src/quark_plugin_quantinuum/backends/: aer_simulator.py  backend_input.py  backend_result.py
src/quark_plugin_quantinuum/free_fermion/: free_fermion.py  free_fermion_helpers.py
src/quark_plugin_quantinuum/simulation/: __init__.py  simulation.py
src/quark_plugin_quantinuum/simulation/backends/: aer_simulator.py  backend_input.py  backend_result.py
src/quark_plugin_quantinuum/simulation/free_fermion/: __init__.py  free_fermion.py
tests/: test_free_fermion.py
